test/testdata/functions/duplicate_params_error.lox
// error: duplicate parameter x
// error: duplicate parameter y
fun f(x, y, z, x, y) {}
